# rokerpack

./: CMakeLists.txt  README.md  RokerPack.iss
.github/workflows/: cmake-art-vst3-ubuntu.yml  cmake-windows.yml  win-inno.yml
docs/: index.html  style.css
docs/ru/: index.html
src/: BassPitchDetector.cpp  BassPitchDetector.h  BassStringsPanel.cpp  BassStringsPanel.h  BassTunerEditor.cpp  BassTunerEditor.h  BassTunerProcessor.cpp  BassTunerProcessor.h  BronzaController.cpp  BronzaController.h  BronzaEditor.cpp  BronzaEditor.h  BronzaLookAndFeel.cpp  BronzaLookAndFeel.h  BronzaPlugView.cpp  BronzaPlugView.h  BronzaProcessor.cpp  BronzaProcessor.h  CharmEditor.cpp  CharmEditor.h  CharmProcessor.cpp  CharmProcessor.h  Colors.h  GateDetector.cpp  GateDetector.h  GrelkaEditor.cpp  GrelkaEditor.h  GrelkaProcessor.cpp  GrelkaProcessor.h  GuitarMeterPanel.cpp  GuitarMeterPanel.h  GuitarPitchDetector.cpp  GuitarPitchDetector.h  GuitarTunerEditor.cpp  GuitarTunerEditor.h  GuitarTunerProcessor.cpp  GuitarTunerProcessor.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiWindow.cpp  (+27 more)
